[package]
name = "daily_summary_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
aws-config = "1.1.10"
aws-sdk-eventbridge = "1.19.0"
aws-sdk-s3 = "1.22.0"
chrono = "0.4.35"
dotenv = "0.15.0"
futures = "0.3.30"
lambda_http = "0.10.0"
openssl = { version = "0.10.64", features = ["vendored"] }
regex = "1.10.4"
reqwest = { version = "0.12.2", features = ["json"] }
serde = "1.0.197"
serde_json = "1.0.114"
serde_urlencoded = "0.7.1"

tokio = { version = "1", features = ["macros"] }

[dev-dependencies]
env_logger = "0.11.3"
test-log = "0.2.15"
tokio-test = "0.4.4"

[profile.release]
debug = true  # Include debug symbols in release builds for better backtracing
